# CcTftpServer

./: CMakeLists.txt  README.md  VERSION.cmake
CMakeConfig/: CcTftpServerMacros.cmake  ProjectMacros.cmake
CMakeConfig/InputFiles/: CcTftpServerVersion.rc.in  ProjectVersion.rc.in
CcTftpServer/: CMakeLists.txt  CcTftpServerApp.h  CcTftpServerVersion.aps  CcTftpServerVersion.rc
CcTftpServer/src/: CcTftpServerApp.cpp  main.cpp
Documents/Doxygen/: config.txt  config.txt.in
